# sovara-demo-py

./: .env.example  .gitattributes  .gitignore  README.md  agent.py  analyze_results.py  financebench_ingestion.py  main.py  pyproject.toml
.sovara/: .project_id
data/financebench/raw/: financebench_annotation_unit_test.jsonl  financebench_custom_probe_queries.jsonl  financebench_open_source.jsonl  financebench_open_source_composed_generalization.jsonl
data/pageindex/: financebench_pageindex.jsonl
src/sovara_demo/: __init__.py  env.py
src/sovara_demo/pageindex/: __init__.py  client.py  config.yaml  page_index.py  page_index_md.py  retrieve.py  utils.py
